[package]
name = "usearch-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
usearch = "2"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "spfresh"
path = "src/bin/spfresh/main.rs"

[[bench]]
name = "index_benchmark"
harness = false
